--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
 
 	<title>Digital Numbers</title>
 
-	<script src="/app/js/digits.js" defer></script>
-	<script src="/app/js/bubble_bg.js" defer></script>
+	<!-- <script src="/app/js/digits.js" defer></script> -->
+	<!-- <script src="/app/js/bubble_bg.js" defer></script> -->
+	<script src="/app/js/newRender.js" defer></script>
 </head>
 
 <body>
